--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- SECTION -->
     <h1 class="animate__animated animate__fadeInLeft">MENU</h1>
-    <div class="container row m-4">
+    <div class="container-fluid row">
       <div class="card col-sm-12 col-md-6 col-lg-4">
         <img src="images/entradas.jpg" class="card-img-top" alt="...">
         <div class="card-body">
