--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="desciption" content= "Nos encontramos en Ruta 51 y acceso a Planta L’ Amalí">
+    <meta name="keywords" content="acceso, lugar, ubicacion">
     <title>Home</title>
     <!-- CDN ANIMACIONES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
