--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hecha un vistazo a las bebidas para acompañar tu comida">
+    <meta name="keywords" content="bebidas, refrescantes, gaseosas">
     <title>Bebidas</title>
     <!-- CDN ANIMACIONES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
