--- a/pages/pastas.html
+++ b/pages/pastas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Vení a disfrutar nuestras pastas caseras con la salsa mas deliciosa al estilo italiano">
+    <meta name="keywords" content="pastas, italiano, salsa">
     <title>Pastas</title>
     <!-- CDN ANIMACIONES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
