--- a/pages/postres.html
+++ b/pages/postres.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="No podés irte sin antes haber probado nuestros postres 100% caseros">
+    <meta name="keywords" content="postres, dulce, delicioso">
     <title>Postres</title>
     <!-- CDN ANIMACIONES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
