--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Aqui encontraras las opciones para comenzar a probar nuestras elaboraciones.">
+    <meta name="keywords" content="entradas, rabas, provoleta, picada">
     <title>Ubicacion</title>
     <!-- CDN ANIMACIONES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
