--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- NAVEGADOR -->
     <nav class="navbar navbar-expand-lg navegador">
         <div class="container-fluid">
-          <a class="navbar-brand titulo" href="index.html">TRADICION BARCELONA</a>
+          <a class="navbar-brand titulo animate__animated animate__rotateIn" href="index.html">TRADICION BARCELONA</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
